--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "axios": "^0.15.3",
     "express": "^4.14.1",
     "react": "^0.14.7",
+    "react-cookie": "^1.0.4",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.0"
+    "react-redux-i18n": "^1.8.0",
+    "react-router": "^2.0.0",
+    "react-toggle-switch": "^2.1.3"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
@@ -25,7 +28,17 @@
     "css-loader": "^0.23.1",
     "foundation-sites": "^6.2.0",
     "jquery": "^2.2.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-mocha": "^0.2.2",
+    "karma-mocha-reporter": "^2.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
+    "react-redux": "^4.4.1",
+    "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1",
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
