--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.15.3",
     "express": "^4.14.1",
     "react": "^0.14.7",
+    "react-autocomplete": "^1.7.1",
     "react-cookie": "^1.0.4",
     "react-dom": "^0.14.7",
     "react-redux-i18n": "^1.8.0",
