--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "express": "^4.14.1",
+    "form-data": "^2.3.1",
     "react": "^0.14.7",
     "react-autocomplete": "^1.7.1",
     "react-cookie": "^1.0.4",
