--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-autocomplete": "^1.7.1",
     "react-cookie": "^1.0.4",
     "react-dom": "^0.14.7",
+    "react-google-login": "^2.9.3",
+    "react-google-login-component": "^0.9.0",
     "react-redux-i18n": "^1.8.0",
     "react-router": "^2.0.0",
     "react-toggle-switch": "^2.1.3"
