--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^0.14.7",
     "react-google-login": "^2.9.3",
     "react-google-login-component": "^0.9.0",
+    "react-infinite-scroll": "^0.1.5",
     "react-redux-i18n": "^1.8.0",
     "react-router": "^2.0.0",
     "react-toggle-switch": "^2.1.3"
