--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-infinite-scroll": "^0.1.5",
     "react-redux-i18n": "^1.8.0",
     "react-router": "^2.0.0",
-    "react-toggle-switch": "^2.1.3"
+    "react-toggle-switch": "^2.1.3",
+    "striptags": "^3.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
